# ResearchLikeIAmFive

./: .gitignore  DEPLOYMENT.md  DEV_GUIDE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  requirements.txt  test_replacement.js  tsconfig.json  tsconfig.node.json  vercel.json
api/: _config.py  _rate_limiter.py  _utils.py  app.py
backend/: .env.template  Dockerfile  README.md  __init__.py  ai_prompts.py  ai_service.py  arxiv_service.py  config.py  main.py  middleware.py  pdf_processor.py  pyproject.toml  routes.py  security.py  utils.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  FigureDisplay.tsx  SummaryDisplay.tsx  types.ts
src/: App.tsx  SummaryDisplay.tsx  index.css  types.ts
