[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "fastapi>=0.115.14",
    "pymupdf>=1.24.0",
    "google-genai>=1.22.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.30.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.11.7",
]
